0031647: Samples - do not enable floating point exceptions in MFC samples